# code-tree-rs

./: .gitignore  Cargo.toml  README.md  README_zh.md  litho.toml
.github/workflows/: release.yml
doc/: AdvancedMetrics.md  Architecture.md
scripts/: install.ps1
src/: cli.rs  config.rs  main.rs
src/cache/: mod.rs  performance_monitor.rs
src/generator/: context.rs  mod.rs  types.rs  workflow.rs
src/generator/preprocess/: memory.rs  mod.rs
src/generator/preprocess/agents/: code_analyze.rs  code_purpose_analyze.rs  mod.rs  relationships_analyze.rs
src/generator/preprocess/agents/prompts/: code_analyze_sys.tpl  code_analyze_user.tpl  code_purpose_analyze_user.tpl  relationships_analyze_sys.tpl  relationships_analyze_user.tpl
src/generator/preprocess/extractors/: dir_stats_extractor.rs  dir_tree_extractor.rs  filter.rs  mod.rs  original_document_extractor.rs  structure_extractor.rs
src/generator/preprocess/extractors/language_processors/: csharp.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  react.rs  rust.rs  svelte.rs  swift.rs  typescript.rs  vue.rs
src/memory/: mod.rs
src/types/: code.rs  code_releationship.rs  mod.rs  original_document.rs  project_structure.rs
src/utils/: file_utils.rs  mod.rs  project_structure_formatter.rs  sources.rs  threads.rs
