[package]
name = "code-tree-rs"
version = "1.3.0"
edition = "2024"

description = "lightweight code tree generator for Rust projects"
license = "MIT"
repository = "https://github.com/nimblemo/code-tree-rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Config parsing
toml = "0.9"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.11"

# Hashing
md-5 = "0.10"

# Other tools
futures = "0.3"
